--- a/pages/num8/index.html
+++ b/pages/num8/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:248 643.</p>
                     <p>Средняя стоимость отелей: от 1500 до 3000руб.</p>
                     <p>Среднегодовая температура воздуха + 10,3 °C.</p>
