--- a/pages/num9/index.html
+++ b/pages/num9/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:240 020.</p>
                     <p>Средняя стоимость отелей: от 2500 до 3500руб.</p>
                     <p>Среднегодовая температура воздуха +4 °C.</p>
