--- a/pages/num17/index.html
+++ b/pages/num17/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 188 960.</p>
                     <p>Средняя стоимость отелей: от 1400 руб до 3400 руб.</p>
                     <p>Среднегодовая температура воздуха: 11,1°C.</p>
