--- a/pages/num10/index.html
+++ b/pages/num10/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:122 261.</p>
                     <p>Средняя стоимость отелей: от 2000 до 3000руб.</p>
                     <p>Среднегодовая температура воздуха +9,5 °C.</p>
