--- a/pages/num11/index.html
+++ b/pages/num11/index.html
@@ -54,7 +54,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:123 988.</p>
                     <p>Средняя стоимость отелей: от 1700 руб до 3500 руб.</p>
                     <p>Среднегодовая температура воздуха: 12,5°C.</p>
