--- a/pages/num12/index.html
+++ b/pages/num12/index.html
@@ -64,7 +64,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:126 273.</p>
                     <p>Средняя стоимость отелей: от 1500 до 4000руб.</p>
                     <p>Среднегодовая температура воздуха: +5 °C.</p>
