--- a/pages/num0/index.html
+++ b/pages/num0/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население:*.</p>
                     <p>Средняя стоимость отелей: от ** до **.</p>
                     <p>Среднегодовая температура воздуха: * °C.</p>
