--- a/pages/num13/index.html
+++ b/pages/num13/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 141 475.</p>
                     <p>Средняя стоимость отелей: от 1400 руб до 3600 руб.</p>
                     <p>Среднегодовая температура воздуха: 11,8 °C.</p>
