--- a/pages/num15/index.html
+++ b/pages/num15/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 103 979.</p>
                     <p>Средняя стоимость отелей: от 1000 руб до 3800 руб.</p>
                     <p>Среднегодовая температура воздуха: 5,8°C.</p>
