--- a/pages/num14/index.html
+++ b/pages/num14/index.html
@@ -53,7 +53,7 @@
         </div>
             <div class="statsandsymbols">
                 <div class="stats" style="width: 300px;">
-                    <div class="subtitle">НЕмного информации:</div>
+                    <div class="subtitle">Немного информации:</div>
                     <p>Население: 145 159.</p>
                     <p>Средняя стоимость отелей: от 2700 руб до 3600 руб.</p>
                     <p>Среднегодовая температура воздуха: 6,8°C.</p>
