--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
                     <div class="title">Добро пожаловать на наш сайт!!!</div>
                     <div class="text">
                         <p>
-                            Не знаете куда поехать? Хотите увидеть что-то новое? На нашем сайте размещены различные достопримечательности, которые могут заинтересовать вас в посещении приведедённых городов. Также вы можете выбрать город на карте, узнать о численности населения отелях, достопримечательностях, населении, климате и другие интересные фактах об этих городах. 
+                            Не знаете куда поехать? Хотите увидеть что-то новое? 
+                            </p>
+                        <p>
+                            На нашем сайте размещены различные достопримечательности, которые могут вас заинтересовать в посещении приведедённых городов. вы можете выбрать город на карте и узнать о численности населения, условиях отдыха, достопримечательностях, климате и других интересных фактах.
                         </p>
-                        <p>Надеемся, что вам понравится данные туристические направления!</p>
+                        <p>Желаем хорошего отдыха!</p>
                     </div>
                 </div>
                 <div class="leftcolumn">
