--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             Не знаете куда поехать? Хотите увидеть что-то новое? 
                             </p>
                         <p>
-                            На нашем сайте размещены различные достопримечательности, которые могут вас заинтересовать в посещении приведедённых городов. вы можете выбрать город на карте и узнать о численности населения, условиях отдыха, достопримечательностях, климате и других интересных фактах.
+                            На нашем сайте вы найдёте интересные туристические направления. Выбрав город на карте вы сможете узнать об условиях отдыха, достопримечательностях, численности населения, климате и других интересных фактах.
                         </p>
                         <p>Желаем хорошего отдыха!</p>
                     </div>
