--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="info">
                     <div class="title">Добро пожаловать на наш сайт!!!</div>
                     <div class="text">
-                        <p>
+                        <p style="text-align:center;">
                             Не знаете куда поехать? Хотите увидеть что-то новое? 
                             </p>
                         <p>
