--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <p style="text-align:center;">
                             Не знаете куда поехать? Хотите увидеть что-то новое? 
                             </p>
-                        <p>
+                        <p style="text-indent: 20px;">
                             На нашем сайте вы найдёте интересные туристические направления. Выбрав город на карте вы сможете узнать об условиях отдыха, достопримечательностях, численности населения, климате и других интересных фактах.
                         </p>
                         <p>Желаем хорошего отдыха!</p>
