--- a/pages/num0/index.html
+++ b/pages/num0/index.html
@@ -57,7 +57,7 @@
                     <p>Население:*.</p>
                     <p>Средняя стоимость отелей: от ** до **.</p>
                     <p>Среднегодовая температура воздуха: * °C.</p>
-                    <p>Часовой зона: МСК*.</p>
+                    <p>Часовая зона: МСК*.</p>
                     <p>Расстояние от Москвы:* км.</p>
                     <p>Основан в * году.</p>
                 </div>
