--- a/pages/num1/index.html
+++ b/pages/num1/index.html
@@ -59,7 +59,7 @@
                     <p>Население:106 911.</p>
                     <p>Средняя стоимость отелей: от 3000 руб до 6000 руб.</p>
                     <p>Среднегодовая температура воздуха: −3°C.</p>
-                    <p>Часовой зона: МСК+2.</p>
+                    <p>Часовая зона: МСК+2.</p>
                     <p>Расстояние от Москвы: 2251 км.</p>
                     <p>Основан в  1976 году.</p>
                 </div>
