--- a/pages/num2/index.html
+++ b/pages/num2/index.html
@@ -58,7 +58,7 @@
                     <p>Население:163 919.</p>
                     <p>Средняя стоимость отелей: от 1000 до 4000руб.</p>
                     <p>Среднегодовая температура воздуха — 1,9 °C.</p>
-                    <p>Часовой зона: МСК+2.</p>
+                    <p>Часовая зона: МСК+2.</p>
                     <p>Расстояние от Москвы:1750 км.</p>
                     <p>Основан в 1754 году.</p>
                 </div>
