--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p style="text-indent: 20px;">
                             На нашем сайте вы найдёте интересные туристические направления. Выберите город по его иконке или найдите его на карте и узнайте об условиях отдыха, достопримечательностях, численности населения, климате и других интересных фактах.
                         </p>
-                        <p>Желаем хорошего отдыха!</p>
+                        <p style="text-align:center;">Желаем хорошего отдыха!</p>
                     </div>
                 </div>
                 <div class="leftcolumn">
