--- a/pages/num10/index.html
+++ b/pages/num10/index.html
@@ -58,7 +58,7 @@
                     <p>Население:122 261.</p>
                     <p>Средняя стоимость отелей: от 2000 до 3000руб.</p>
                     <p>Среднегодовая температура воздуха +9,5 °C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы:1483 км.</p>
                     <p>Основан в 1781 году.</p>
                 </div>
