--- a/pages/num11/index.html
+++ b/pages/num11/index.html
@@ -58,7 +58,7 @@
                     <p>Население:123 988.</p>
                     <p>Средняя стоимость отелей: от 1700 руб до 3500 руб.</p>
                     <p>Среднегодовая температура воздуха: 12,5°C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы: 1600 км.</p>
                     <p>Основан в 1932 году.</p>
                 </div>
