--- a/pages/num13/index.html
+++ b/pages/num13/index.html
@@ -57,7 +57,7 @@
                     <p>Население: 141 475.</p>
                     <p>Средняя стоимость отелей: от 1400 руб до 3600 руб.</p>
                     <p>Среднегодовая температура воздуха: 11,8 °C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы: 1251 км.</p>
                     <p>Основан в 1857году.</p>
                 </div>
