--- a/pages/num14/index.html
+++ b/pages/num14/index.html
@@ -57,7 +57,7 @@
                     <p>Население: 145 159.</p>
                     <p>Средняя стоимость отелей: от 2700 руб до 3600 руб.</p>
                     <p>Среднегодовая температура воздуха: 6,8°C.</p>
-                    <p>Часовой зона: МСК+7.</p>
+                    <p>Часовая зона: МСК+7.</p>
                     <p>Расстояние от Москвы: 6495 км.</p>
                     <p>Основан в году 1864.</p>
                 </div>
