--- a/pages/num15/index.html
+++ b/pages/num15/index.html
@@ -57,7 +57,7 @@
                     <p>Население: 103 979.</p>
                     <p>Средняя стоимость отелей: от 1000 руб до 3800 руб.</p>
                     <p>Среднегодовая температура воздуха: 5,8°C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы: 391 км.</p>
                     <p>Основан в 1578 году.</p>
                 </div>
