--- a/pages/num17/index.html
+++ b/pages/num17/index.html
@@ -57,7 +57,7 @@
                     <p>Население: 188 960.</p>
                     <p>Средняя стоимость отелей: от 1400 руб до 3400 руб.</p>
                     <p>Среднегодовая температура воздуха: 11,1°C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы: 1221 км.</p>
                     <p>Основан в 1839 году.</p>
                 </div>
