--- a/pages/num18/index.html
+++ b/pages/num18/index.html
@@ -57,7 +57,7 @@
                     <p>Население: 181 830.</p>
                     <p>Средняя стоимость отелей: от 2000 руб до 5800 руб.</p>
                     <p>Среднегодовая температура воздуха: 1,5°C.</p>
-                    <p>Часовой зона: МСК+4.</p>
+                    <p>Часовая зона: МСК+4.</p>
                     <p>Расстояние от Москвы: 2881 км.</p>
                     <p>Основан в 1935 году.</p>
                 </div>
