--- a/pages/num19/index.html
+++ b/pages/num19/index.html
@@ -57,7 +57,7 @@
                     <p>Население: 314 834.</p>
                     <p>Средняя стоимость отелей: от 1800 руб до 5400 руб.</p>
                     <p>Среднегодовая температура воздуха: 3,3°C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы: 375 км.</p>
                     <p>Основан в 1777 году.</p>
                 </div>
