--- a/pages/num20/index.html
+++ b/pages/num20/index.html
@@ -58,7 +58,7 @@
                     <p>Население:*.</p>
                     <p>Средняя стоимость отелей: от 1200 руб до 4000 руб.</p>
                     <p>Среднегодовая температура воздуха: −3°C.</p>
-                    <p>Часовой зона: МСК+5.</p>
+                    <p>Часовая зона: МСК+5.</p>
                     <p>Расстояние от Москвы: 3813 км.</p>
                     <p>Основан в 1966 году.</p>
                 </div>
