--- a/pages/num21/index.html
+++ b/pages/num21/index.html
@@ -57,7 +57,7 @@
                     <p>Население:223 921.</p>
                     <p>Средняя стоимость отелей: от 1700 руб до 2000 руб.</p>
                     <p>Среднегодовая температура воздуха: 6,5 °C.</p>
-                    <p>Часовой зона: МСК0.</p>
+                    <p>Часовая зона: МСК0.</p>
                     <p>Расстояние от Москвы: 495км.</p>
                     <p>Основан в 1593 году.</p>
                 </div>
