--- a/pages/num23/index.html
+++ b/pages/num23/index.html
@@ -57,7 +57,7 @@
                     <p>Население:308 838.</p>
                     <p>Средняя стоимость отелей: от 1000 до 3500руб.</p>
                     <p>Среднегодовая температура воздуха: +5,6 °C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы:325 км.</p>
                     <p>Основан в 1566 году.</p>
                 </div>
