--- a/pages/num24/index.html
+++ b/pages/num24/index.html
@@ -57,7 +57,7 @@
                     <p>Население:244 403.</p>
                     <p>Средняя стоимость отелей: от 2000 до 4000руб.</p>
                     <p>Среднегодовая температура — +1,3 °C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы:1004 км.</p>
                     <p>Основан в 1780 году.</p>                    
                 </div>
