--- a/pages/num3/index.html
+++ b/pages/num3/index.html
@@ -57,7 +57,7 @@
                     <p>Население:380 632.</p>
                     <p>Средняя стоимость отелей: от 2500 руб до 6000 руб.</p>
                     <p>Среднегодовая температура воздуха: -1,7°C.</p>
-                    <p>Часовой зона: МСК+2.</p>
+                    <p>Часовая зона: МСК+2.</p>
                     <p>Расстояние от Москвы: 2116 км.</p>
                     <p>Основан в 1594 году.</p>
                 </div>
