--- a/pages/num4/index.html
+++ b/pages/num4/index.html
@@ -54,7 +54,7 @@
                     <p>Население:128 779.</p>
                     <p>Средняя стоимость отелей: от 2000 до 5000руб.</p>
                     <p>Среднегодовая температура воздуха — 6,5 °C</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы:1366 км.</p>
                     <p>Основан в 1803 год.</p>                    
                 </div>
