--- a/pages/num5/index.html
+++ b/pages/num5/index.html
@@ -57,7 +57,7 @@
                     <p>Население: 120 778.</p>
                     <p>Средняя стоимость отелей: от 2200 до 2600.</p>
                     <p>Среднегодовая температура воздуха: 1,9 °C.</p>
-                    <p>Часовой зона: МСК+2.</p>
+                    <p>Часовая зона: МСК+2.</p>
                     <p>Расстояние от Москвы: 1376 км.</p>
                     <p>Основан в 1732 году.</p>
                 </div>
