--- a/pages/num6/index.html
+++ b/pages/num6/index.html
@@ -57,7 +57,7 @@
                     <p>Население: 227 049.</p>
                     <p>Средняя стоимость отелей: от 800 руб до 3500 руб **.</p>
                     <p>Среднегодовая температура воздуха: 7,3 °C.</p>
-                    <p>Часовой зона: МСК+1.</p>
+                    <p>Часовая зона: МСК+1.</p>
                     <p>Расстояние от Москвы: 733 км.</p>
                     <p>Основан в 1747 году.</p>
                 </div>
