--- a/pages/num7/index.html
+++ b/pages/num7/index.html
@@ -58,7 +58,7 @@
                     <p>Население:167 160.</p>
                     <p>Средняя стоимость отелей: от 500 до 3000руб.</p>
                     <p>Cреднегодовая температура воздуха — 5,4 °C</p>
-                    <p>Часовой зона: МСК+1.</p>
+                    <p>Часовая зона: МСК+1.</p>
                     <p>Расстояние от Москвы:895 км.</p>
                     <p>Основан в 1683 году.</p>
                 </div>
