--- a/pages/num8/index.html
+++ b/pages/num8/index.html
@@ -52,7 +52,7 @@
                     <p>Население:248 643.</p>
                     <p>Средняя стоимость отелей: от 1500 до 3000руб.</p>
                     <p>Среднегодовая температура воздуха + 10,3 °C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы:953 км.</p>
                     <p>Основан в 1698 году.</p>
                 </div>
