--- a/pages/num9/index.html
+++ b/pages/num9/index.html
@@ -57,7 +57,7 @@
                     <p>Население:240 020.</p>
                     <p>Средняя стоимость отелей: от 2500 до 3500руб.</p>
                     <p>Среднегодовая температура воздуха +4 °C.</p>
-                    <p>Часовой зона: МСК+0.</p>
+                    <p>Часовая зона: МСК+0.</p>
                     <p>Расстояние от Москвы:887 км.</p>
                     <p>Основан в 1961 году.</p>
                 </div>
