--- a/pages/num11/index.html
+++ b/pages/num11/index.html
@@ -63,7 +63,10 @@
                     <p>Основан в 1932 году.</p>
                 </div>
                 <div class="symbols">
-                    <img src="img/emblem.png" class="symbol2">
+                    <d class="symbolwrapper2">
+                        <img src="img/emblem.png" class="symbol2">
+                        <div style="text-align: center;">Герб</div>
+                    </d>
                 </div>
             </div>
         </div>
