--- a/pages/num12/index.html
+++ b/pages/num12/index.html
@@ -78,7 +78,7 @@
                         <div style="text-align: center;">Флаг</div>
                     </d>
                     <d class="symbolwrapper2">
-                        <img src="img/emblem.png" class="symbol2">
+                        <img src="img/emblem.gif" class="symbol2">
                         <div style="text-align: center;">Герб</div>
                     </d>
                 </div>
