--- a/pages/num2/index.html
+++ b/pages/num2/index.html
@@ -63,8 +63,14 @@
                     <p>Основан в 1754 году.</p>
                 </div>
                 <div class="symbols">
-                    <img src="img/flag.png" class="symbol1">
-                    <img src="img/emblem.png" class="symbol2">
+                    <d class="symbolwrapper1">
+                        <img src="img/flag.png" class="symbol1">
+                        <div style="text-align: center;">Флаг</div>
+                    </d>
+                    <d class="symbolwrapper2">
+                        <img src="img/emblem.png" class="symbol2">
+                        <div style="text-align: center;">Герб</div>
+                    </d>
                 </div>
             </div>
         </div>
