--- a/pages/num22/index.html
+++ b/pages/num22/index.html
@@ -62,8 +62,10 @@
                     <p>Основан в 1709 году.</p>
                 </div>
                 <div class="symbols">
-                   
-                    <img src="img/emblem.png" class="symbol2">
+                    <d class="symbolwrapper2">
+                        <img src="img/emblem.png" class="symbol2">
+                        <div style="text-align: center;">Герб</div>
+                    </d>
                 </div>
             </div>
         </div>
