--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                             Не знаете куда поехать? Хотите увидеть что-то новое? 
                             </p>
                         <p style="text-indent: 20px;">
-                            На нашем сайте вы найдёте интересные туристические направления. Выберите город по его иконке или найдите его на карте и узнайте об условиях отдыха, достопримечательностях, численности населения, климате и других интересных фактах.
+                            На нашем сайте вы найдёте интересные туристические направления. 
+                        </p> 
+                        <p style="text-indent: 20px;">
+                            Выберите город по его иконке или найдите его на карте и узнайте об условиях отдыха, достопримечательностях, численности населения, климате и других интересных фактах.
                         </p>
                         <p style="text-align:center;">Желаем хорошего отдыха!</p>
                     </div>
