--- a/pages/num4/index.html
+++ b/pages/num4/index.html
@@ -59,8 +59,14 @@
                     <p>Основан в 1803 год.</p>                    
                 </div>
                 <div class="symbols">
-                    <img src="img/flag.png" class="symbol1">
-                    <img src="img/emblem.png" class="symbol2">
+                    <d class="symbolwrapper1">
+                        <img src="img/flag.png" class="symbol1">
+                        <div style="text-align: center;">Флаг</div>
+                    </d>
+                    <d class="symbolwrapper2">
+                        <img src="img/emblem.png" class="symbol2">
+                        <div style="text-align: center;">Герб</div>
+                    </d>
                 </div>
             </div>
     </div>
