--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             На нашем сайте вы найдёте непопулярные, но интересные туристические направления России. 
                         </p> 
                         <p style="text-indent: 20px;">
-                            Выберите город по его иконке или найдите его на карте и узнайте об условиях отдыха, достопримечательностях, численности населения, климате и других интересных фактах.
+                            Выберите город по его иконке или найдите его на <a href="#anchor">карте</a> и узнайте об условиях отдыха, достопримечательностях, численности населения, климате и других интересных фактах.
                         </p>
                         <p style="text-align:center;">Желаем хорошего отдыха!</p>
                     </div>
@@ -60,7 +60,8 @@
             </div>
         </div>
         <div class="map">
-            <canvas height="580" width="944" id="mapcanvas"></canvas>
+            <canvas height="580" width="944" id="mapcanvas">map is not here</canvas>
+            <a id="anchor"></a>
         </div>
         <div class="footer">Отзывы: reviewstourism@mail.ru</div>
     </div>
